--- a/assets/meta/projects.json
+++ b/assets/meta/projects.json
@@ -22,7 +22,7 @@
     ],
     "heading": "A Complete back-end for a Stock Market portfolio application",
     "description": "A stock portfolio management app that offers users real-time investment tracking through integrated Finance APIs. With robust data protection and authentication measures, users can safely monitor their portfolios, making informed decisions to maximize their gains.",
-    "thumbnail": "./img/smpm.jpg",
+    "thumbnail": "smpm.jpg",
     "rank": 3
   },
   {
@@ -50,7 +50,7 @@
     ],
     "heading": "Unified marketing solution for social media managers and small businesses",
     "description": "Unilink revolutionizes social media management, offering a multi-platform solution that cuts posting time by 60%. With seamless API integration, secure login, and a user-centric design, it streamlines your workflow across all major social networks.",
-    "thumbnail": "./img/uni-link-logo.png",
+    "thumbnail": "uni-link-logo.png",
     "rank": 2
   },
   {
@@ -80,7 +80,7 @@
     ],
     "heading": "Stock Market Prediction using Social Media Sentiment",
     "description": "Developed during a hackathon, this innovative web app leverages Twitter and Finance APIs to predict stock prices. By combining natural language processing of tweets with historical market data, it offers dynamic forecasts based on social media sentiment and past performance",
-    "thumbnail": "./img/project-1.png",
+    "thumbnail": "project-1.png",
     "rank": 3
   },
   {
@@ -106,11 +106,11 @@
     ],
     "heading": "A Cross-platform application to browse and download curated art posts from reddit",
     "description": "ReImagine is an intuitive app that allows users to explore and save curated art from Reddit's Imaginary Network Expanded (INE) group of subreddits. The apps's simple and secure authentication lets users enjoy a seamless browsing experience, discover new artists, and easily organize their favorite posts.",
-    "thumbnail": "./img/project-2.png",
+    "thumbnail": "project-2.png",
     "rank": 6
   },
   {
-    "title": "Book \\'S\\' Mart",
+    "title": "Book 'S' Mart",
     "link": "https://github.com/hardik-kapadia/BookSMart",
     "tags": [
       "java",
@@ -132,7 +132,7 @@
     ],
     "heading": "An Android App to exchange books",
     "description": "A multi-platform social media management application that enables users to manage their social media profiles accross multiple social platforms from a single unified app. Allowed users to post, view statistics, and curate their content curation strategy using trained Convolutional and Recurrent neural networks embedded within the app",
-    "thumbnail": "./img/booksmart-logo.jpg",
+    "thumbnail": "booksmart-logo.jpg",
     "rank": 5
   },
   {
@@ -161,7 +161,7 @@
     ],
     "heading": "A multi-lingual telegram bot bringing AI to the masses",
     "description": "A GPT-powered multilingual Telegram bot which assists underprivileged farmers with agricultural queries, bridging language barriers and improving information accessibility. Users can send voice note queries in any language, receiving responses as both text and AI-generated voice notes, enhancing overall usability and reach.",
-    "thumbnail": "./img/placeholder.jpg",
+    "thumbnail": "placeholder.jpg",
     "rank": 2
   },
   {
@@ -187,7 +187,7 @@
     ],
     "heading": "A Discord bot for memes and the community",
     "description": "A Discord bot that streamlines server moderation, aiding in community management. Its web scraping capabilities, powered by Beautiful Soup, integrate iFunny content into Discord channels. Hosted on Heroku and supported by a CI/CD pipeline through GitHub Actions, this bot enhances Discord server functionality.",
-    "thumbnail": "./img/uni-link-logo.png",
+    "thumbnail": "uni-link-logo.png",
     "rank": 5
   },
   {
@@ -212,7 +212,8 @@
     ],
     "heading": "A Research project to qunatify users' social media impact",
     "description": "A collaborative project with a professor to develop a sophisticated statistical model for quantifying social media presence. This model computes personalized sociability scores and inter-user homophily. Advanced data mining techniques and Recurrent neural networks were used to analyze over 5000 user profiles, enhancing the model's accuracy.",
-    "thumbnail": "./img/uni-link-logo.png"
+    "thumbnail": "uni-link-logo.png",
+    "rank": 4
   },
   {
     "title": "Insta-Diagnosis",
@@ -239,7 +240,8 @@
     ],
     "heading": "A web application designed to predict the presence of a specific disease based on medical scan analysis ",
     "description": "A web application for disease prediction, leveraging medical scan analysis. It incorporates user authentication and secure data storage using SQLite, managing user profiles and medical records. The image pre-processing pipeline, optimized with OpenCV, enhances the accuracy of Convolutional Neural Networks in detecting diseases from medical scans",
-    "thumbnail": "./img/uni-link-logo.png"
+    "thumbnail": "uni-link-logo.png",
+    "rank": 3
   },
   {
     "title": "Web Crawler",
@@ -264,6 +266,7 @@
     ],
     "heading": "A multi-threaded web crawler to extract images from websites and their subpages",
     "description": "A multi-threaded web crawler to extract images from websites and their subpages. The crawler utilizes Java’s concurrent programming capabilities, implementing recursive job creation and asynchronous processing to efficiently handle multiple URLs, optimizing both performance and resource management. Additionally, URL filtering mechanisms and depth/URL limits were designed to ensure focused crawling within specified domains while preventing resource overuse",
-    "thumbnail": "./img/uni-link-logo.png"
+    "thumbnail": "uni-link-logo.png",
+    "rank": 1
   }
 ]
